<resources>
    <string name="app_name">SocialNetwork</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="social_network">Social Network</string>
    <string name="visibility_icon">Visibility icon</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="home">Home</string>
    <string name="friend_requests">Friend requests</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="name_surname">Name Surname</string>
    <string name="friends">friends</string>
    <string name="posts">posts</string>
    <string name="number">0</string>
    <string name="profile_image">Profile image</string>
    <string name="add_friend">Add friend</string>
    <string name="plus_icon">Plus icon</string>
    <string name="waiting_for_response">Waiting for response</string>
    <string name="friends_upper_case">Friends</string>
    <string name="trash_icon">Trash icon</string>
    <string name="edit_profile">Edit profile</string>
    <string name="save_changes">Save changes</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="none">None</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="_21_21_12_06_2024">21:21 12.06.2024.</string>
    <string name="description">Description...</string>
    <string name="show_comments">Show comments</string>
    <string name="post">Post</string>
    <string name="write_your_comment">Write your comment...</string>
    <string name="comment">Comment</string>
    <string name="hide_comments">Hide comments</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="create_post">Create post</string>
    <string name="add_image">Add image</string>
    <string name="selected_image">Selected image</string>
    <string name="search_for_users">Search for users...</string>
    <string name="search">Search</string>
    <string name="messages">Messages</string>
    <string name="friend">Friend</string>
    <string name="send_button">Send button</string>
    <string name="write_message">Write message...</string>
    <string name="hi">Hi!</string>
    <string name="hello">Hello</string>
    <string name="message_icon">Message icon</string>
    <string name="camera_icon">Camera icon</string>
    <string name="clear">Clear</string>
    <string name="choose_images">Choose images</string>
    <string name="select_images">Select images</string>
    <string name="post_image">Post image</string>
</resources>