<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textSize="24sp"
        android:textColor="@color/primaryColor"
        android:textStyle="bold"
        android:layout_marginTop="30dp" />

<!--    <ImageView-->
<!--        android:id="@+id/profile_image"-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="150dp"-->
<!--        android:contentDescription="@string/profile_image"-->
<!--        android:src="@drawable/ic_profile"-->
<!--        android:background="@drawable/circular_border"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--         />-->
<!--    <com.google.android.material.imageview.ShapeableImageView-->
<!--        android:id="@+id/profile_image"-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="150dp"-->
<!--        android:contentDescription="@string/profile_image"-->
<!--        android:src="@drawable/ic_profile"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        app:shapeAppearanceOverlay="@style/ShapeAppearance_App_Circular"-->
<!--        />-->

    <com.google.android.material.card.MaterialCardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="75dp"
        app:strokeColor="@color/primaryColor"
        app:strokeWidth="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/ic_profile"
        android:tint="@color/primaryColor"
        android:background="@color/backgroundColor"
        app:shapeAppearanceOverlay="@style/ShapeAppearance_App_Circular" />

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/camera"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/camera_icon"
        android:src="@drawable/ic_camera"
        android:layout_marginBottom="5dp"
        app:tint="@color/onSecondaryColor" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/first_name"
        android:textColorHint="@color/primaryColorVariant"
        android:inputType="text"
        android:padding="12dp"
        android:background="@drawable/edit_text"
        android:textColor="@color/primaryDarkColor"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/last_name"
        android:textColorHint="@color/primaryColorVariant"
        android:inputType="text"
        android:padding="12dp"
        android:background="@drawable/edit_text"
        android:textColor="@color/primaryDarkColor"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/email"
        android:textColorHint="@color/primaryColorVariant"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:background="@drawable/edit_text"
        android:textColor="@color/primaryDarkColor"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/username"
        android:textColorHint="@color/primaryColorVariant"
        android:inputType="text"
        android:padding="12dp"
        android:background="@drawable/edit_text"
        android:textColor="@color/primaryDarkColor"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp" />

    <Button
        android:id="@+id/saveChanges"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:textColor="@color/onPrimaryColor"
        android:layout_margin="12dp"
        android:padding="12dp" />

    <TextView
        android:id="@+id/changePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textColor="@color/primaryColorVariant"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/primaryColor"
            app:menu="@menu/bottom_nav_menu"
            app:itemIconTint="@drawable/bottom_nav_color"
            app:itemTextColor="@drawable/bottom_nav_color"
            app:labelVisibilityMode="unlabeled"
            app:itemIconSize="30dp"/>

    </RelativeLayout>

</LinearLayout>
