<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:background="@drawable/card"
    android:padding="20dp"
    android:elevation="8dp"
    android:layout_marginBottom="10dp" >

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_profile"
        android:contentDescription="@string/profile_image"
        app:tint="@color/primaryColor" />

    <TextView
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/username"
        android:textColor="@color/onSecondaryColor"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"/>

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_trash"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/trash_icon"
        app:tint="@color/primaryColor" />

</LinearLayout>
