<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card"
        android:gravity="center"
        android:padding="16dp"
        android:elevation="8dp"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/profile_image"
                android:src="@drawable/ic_profile"
                android:icon="@color/primaryColor"
                app:tint="@color/primaryColor" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textColor="@color/onSecondaryColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_surname"
                    android:textStyle="italic"
                    android:textColor="@color/secondaryColorVariant"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginEnd="30dp" >

                    <TextView
                        android:id="@+id/posts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/number"
                        android:textColor="@color/onSecondaryColor"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/posts_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/secondaryColorVariant"
                        android:text="@string/posts"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/friends"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/number"
                        android:gravity="center_horizontal"
                        android:textColor="@color/onSecondaryColor"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/friends_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/secondaryColorVariant"
                        android:text="@string/friends"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
            
        </LinearLayout>

        <Button
            android:id="@+id/send_friend_request_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_friend"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/onPrimaryColor"
            android:drawableLeft="@drawable/ic_plus"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/waiting_for_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/card2"
            android:gravity="center"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:elevation="8dp"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waiting_for_response"
                android:textColor="@color/onSecondaryColor" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/friends_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/card2"
                android:gravity="center"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:elevation="8dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friends_upper_case"
                    android:textColor="@color/onSecondaryColor" />

            </LinearLayout>

            <ImageView
                android:id="@+id/trash_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|center_vertical"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/trash_icon"
                android:src="@drawable/ic_trash"
                app:tint="@color/onSecondaryColor" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/primaryColor"
            app:menu="@menu/bottom_nav_menu"
            app:itemIconTint="@drawable/bottom_nav_color"
            app:itemTextColor="@drawable/bottom_nav_color"
            app:labelVisibilityMode="selected"
            app:itemIconSize="30dp"/>

    </RelativeLayout>

</RelativeLayout>
